Redo layout and add category filtering

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,19 +4,10 @@
    Author's custom styles
    ========================================================================== */
 
+body {
+  margin-top: 10px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.project-tile {
+  width: 95%;
+}
